# SpeachToText_IT

./: README.md
SpeachToText_IT-VOSK/: .gitignore  README.md  pyproject.toml
SpeachToText_IT-VOSK/speachtotext_it_vosk/: __init__.py  speachToTextITVoskApp.py
SpeachToText_IT-VOSK/speachtotext_it_vosk/configs/: logger.yml  speachToText_it_config.yml
SpeachToText_IT-VOSK/speachtotext_it_vosk/templates/: index.html
SpeachToText_IT-VOSK/tests/: Test_Flask.py
